--- a/preservation/css/style.css
+++ b/preservation/css/style.css
@@ -7,12 +7,15 @@
   --ccyan: #01ffc3;
   --cgreen: #96fdde;
   --cblue: #85c8ff;
+  --cred: #e9262c;
 
   --lyellow: #ffff66c4;
   --lpink: #fbadd4c4;
   --lcyan: #01ffc3c4;
   --lgreen: #96fddec4;
   --lblue: #85c8ffc4;
+
+  --border-pink: #ffccf1;
 }
 /**c for cyber, l for low capacity***/
 
@@ -40,7 +43,7 @@ body {
   background-size: 400% 400%;
   animation: gradient 5s ease infinite;
 }
-#body3 {
+#record-memory {
   background-image: url("../img/bg/bg2.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -325,6 +328,109 @@ h2 {
   right: 50px;
 }
 
+/***************************Record Memory*************************/
+
+.center-form {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+}
+
+input[type="text"] {
+  font-size: 1.2em;
+}
+
+.memory-name,
+.memory-content {
+  font-size: 1.2em;
+  /* min-width: 800px; */
+  background: none;
+  color: white;
+  border: 2px solid var(--border-pink);
+}
+
+.memory-name:focus,
+.memory-content:focus {
+  background: rgba(255, 255, 255, 0.479);
+  color: white;
+  border: 2px solid var(--border-pink);
+  font-size: 1.2em;
+}
+
+.category-options {
+  border: 2px solid var(--border-pink);
+  margin: 20px 0;
+  padding-top: 20px;
+}
+.radio-form input[type="radio"] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+.radio-form label {
+  margin: 0 10px 20px;
+  padding: 10px;
+  height: 50px;
+  width: 180px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  color: white;
+  font-family: "Orbitron", sans-serif;
+  font-size: 1.2em;
+  font-weight: 300;
+  opacity: 0.8;
+}
+
+.radio-form label:hover {
+  opacity: 1;
+}
+
+.radio-form input[type="radio"]:focus + label {
+  opacity: 1;
+  color: var(--border-pink);
+  text-shadow: 2px 2px 5px var(--border-pink);
+}
+
+.radio-form input[type="radio"]:checked + label {
+  opacity: 1;
+}
+
+.btn-control.submit {
+  width: 100%;
+  height: 50px;
+  margin: 0;
+  font-size: 1.2em;
+}
+
+.form-control::placeholder {
+  color: #ffffff73;
+}
+
+.form-check-inline {
+  margin-right: 0;
+}
+
+.form-frame {
+  width: 100%;
+  height: 100%;
+  border: 2px solid white;
+}
+
+.form-group {
+  margin-bottom: 0;
+}
+
+.error {
+  color: var(--cred);
+  text-align: left;
+  text-shadow: 2px 2px 5px var(--cred);
+}
 /***************************Introduction*************************/
 .videoBgWrapper {
   position: fixed;
@@ -344,7 +450,7 @@ h2 {
   height: 100%;
 }
 
-.controlBtn {
+.btn-control {
   display: inline-block;
   margin: 0 20px;
   height: 30px;
