--- a/css/style_also_old.css
+++ b/css/style_also_old.css
@@ -399,6 +399,8 @@ input[type="text"] {
 
 .radio-form input[type="radio"]:checked + label {
   opacity: 1;
+  color: var(--border-pink);
+  text-shadow: 2px 2px 5px var(--border-pink);
 }
 
 .btn-control.submit {
