--- a/css/style.css
+++ b/css/style.css
@@ -422,6 +422,8 @@ input[type="text"] {
 
 .radio-form input[type="radio"]:checked + label {
   opacity: 1;
+  color: var(--border-pink);
+  text-shadow: 2px 2px 5px var(--border-pink);
 }
 
 .btn-control.submit {
@@ -541,16 +543,16 @@ input[type="text"] {
   margin-top: 50px;
 }
 
-/***************************Start*************************/
+/***************************View Memory*************************/
 #sketch-holder {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
+  width: 50vh;
   text-align: center;
+}
+
+#sketch-holder:before {
+  content: "";
+  display: block;
+  padding-top: 100%;
 }
 
 .closeBtn {
@@ -560,6 +562,13 @@ input[type="text"] {
   background-color: transparent;
   border-color: transparent;
   z-index: 999;
+}
+
+.memory-title {
+  font-size: 3em;
+  margin: 50px 0 0 0;
+  color: var(--cpurple);
+  text-shadow: 0 0 10px var(--cpurple);
 }
 /***************************Neon Button*************************/
 .svg-wrapper {
