--- a/css/style.css
+++ b/css/style.css
@@ -544,7 +544,7 @@ input[type="text"] {
 }
 
 /***************************View Memory*************************/
-#sketch-holder {
+/* #sketch-holder {
   width: 50vh;
   text-align: center;
 }
@@ -553,7 +553,7 @@ input[type="text"] {
   content: "";
   display: block;
   padding-top: 100%;
-}
+} */
 
 .closeBtn {
   position: fixed;
@@ -566,10 +566,50 @@ input[type="text"] {
 
 .memory-title {
   font-size: 3em;
-  margin: 50px 0 0 0;
+  margin: 200px 0 0 0;
   color: var(--cpurple);
   text-shadow: 0 0 10px var(--cpurple);
 }
+
+.view-memory {
+  color: white;
+  font-size: 3em;
+}
+
+.view-content {
+  width: 100%;
+  max-height: 200px;
+  text-align: left;
+  overflow-y: auto;
+  margin: 20px 0;
+  padding: 20px;
+  font-size: 1.2em;
+  color: white;
+}
+
+h3 {
+  color: var(--cpurple);
+  font-size: 2em;
+}
+
+.scroll {
+  box-shadow: inset 0 0 0px var(--cpurple), inset 0 0 20px var(--cpurple),
+    inset 0 0 20px var(--cpurple), 0 0 0px var(--cpurple),
+    0 0 1px var(--cpurple), 0 0 20px var(--cpurple);
+}
+
+.scroll::-webkit-scrollbar {
+  width: 10px;
+}
+
+.scroll::-webkit-scrollbar-track {
+  background: #bdbdbd;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  background: var(--cpurple);
+}
+
 /***************************Neon Button*************************/
 .svg-wrapper {
   height: 60px;
