--- a/css/choice.css
+++ b/css/choice.css
@@ -50,10 +50,33 @@ body {
 .choice-button-wide {
   width: 200px;
   height: 50px;
-  margin: 0 80px 0 20px;
+  margin: 0 30px;
 }
 
 .append-img {
   top: 100px;
   width: 500px;
+}
+.question-container h1 {
+  color: white;
+  margin-top: 250px;
+}
+
+.question-container .heading {
+  width: 700px;
+  top: 100px;
+}
+
+@media (max-width: 768px) {
+  .question-container {
+    transform: scale(0.6, 0.6);
+  }
+
+  .question-container h1 {
+    margin-top: 160px;
+  }
+
+  .question-container .heading {
+    top: 0;
+  }
 }
