--- a/css/choice.css
+++ b/css/choice.css
@@ -70,6 +70,7 @@ body {
 @media (max-width: 768px) {
   .question-container {
     transform: scale(0.6, 0.6);
+    margin-top: 100px;
   }
 
   .question-container h1 {
@@ -78,5 +79,16 @@ body {
 
   .question-container .heading {
     top: 0;
+  }
+}
+
+@media (max-width: 576px) {
+  .question-container {
+    transform: scale(0.5, 0.5);
+    margin-top: 100px;
+  }
+
+  .frame {
+    width: 600px !important;
   }
 }
