--- a/css/choice.css
+++ b/css/choice.css
@@ -9,6 +9,13 @@ body {
   overflow: hidden;
 }
 
+.backicon-fixed {
+  position: fixed;
+  top: 2vw;
+  left: 2vw;
+  z-index: 999;
+}
+
 .choice-container {
   height: 80vh;
 }
@@ -65,11 +72,12 @@ body {
 .question-container .heading {
   width: 700px;
   top: 100px;
+  z-index: 999;
 }
 
 @media (max-width: 768px) {
   .question-container {
-    transform: scale(0.6, 0.6);
+    transform: scale(0.9, 0.9);
     margin-top: 100px;
   }
 
@@ -80,15 +88,43 @@ body {
   .question-container .heading {
     top: 0;
   }
+
+  .choice-container {
+    transform: scale(0.7, 0.7);
+  }
+  .gif-container {
+    top: 40%;
+  }
+
+  h1#text {
+    width: 100%;
+    top: 200px !important;
+  }
+
+  #button-container {
+    margin-top: 150px !important;
+  }
+
+  .gif-container.center {
+    margin: 60px 0 !important;
+  }
+  #logo {
+    top: 20px !important;
+  }
 }
 
 @media (max-width: 576px) {
   .question-container {
-    transform: scale(0.5, 0.5);
+    transform: scale(0.7, 0.7);
     margin-top: 100px;
   }
 
   .frame {
-    width: 600px !important;
+    width: 130vw !important;
+  }
+
+  .choice-container {
+    transform: scale(0.6, 0.6);
+    margin-top: 100px;
   }
 }
