--- a/css/about_us.css
+++ b/css/about_us.css
@@ -1,21 +1,5 @@
-#body {
-  background-image: url("../img/bg/bg4.jpg");
-
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
-#body2 {
-  background-image: url("../img/bg/bg3.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
-#body3 {
+#about-us {
   font-family: "Orbitron", sans-serif;
-
   /* background-image: url("../img/bg/bg2.jpg"); */
   background-color: black;
   background-position: center;
@@ -23,48 +7,15 @@
   background-size: cover;
   background-attachment: fixed;
 }
-/*category*/
-.Saved-memory {
-  position: absolute;
-  top: 8.5vw;
-  left: 43vw;
-  font-size: 25px;
-  font-weight: bold;
-  color: #c5c2c3;
+.member-photo {
+  text-align: center;
 }
-.My-dream {
-  position: absolute;
-  top: 19.75vw;
-  left: 44vw;
-  font-size: 25px;
-  font-weight: bold;
-  color: #c5c2c3;
-}
-.Read-me {
-  position: absolute;
-  top: 31vw;
-  left: 46vw;
-  font-size: 25px;
-  font-weight: bold;
-  color: #c5c2c3;
-}
-.About-us {
-  position: absolute;
-  top: 42.5vw;
-  left: 46vw;
-  font-size: 25px;
-  font-weight: bold;
-  color: #c5c2c3;
-}
-/*category*/
-/* About-us-page*/
 
 .nav {
   position: absolute;
   top: 1vw;
   right: 3vw;
 }
-
 .member-content-head {
   margin-top: 5vw;
   font-size: 33px;
@@ -73,13 +24,14 @@
   text-align: center;
 }
 .member-content {
-  margin-left: 10vw;
-  margin-right: 10vw;
+  width: 80%;
+  margin: 0 auto;
   font-size: 22px;
   color: #c5c2c3;
   text-align: center;
   font-weight: lighter;
   text-align: center;
+  font-family: "Roboto", sans-serif;
 }
 .sound-team {
   color: #c5c2c3;
@@ -165,213 +117,11 @@
   font-weight: bolder;
 }
 
-/*Read-me-page*/
-.head1 {
-  margin-top: -50px;
-  height: 500px;
-}
-
-.button1 {
-  background-color: transparent;
-  margin-left: 41%;
-  margin-top: 10%;
-  backface-visibility: hidden;
-  border: transparent;
-}
-.narv2 {
-  width: 100%;
-}
-.f-nav {
-  height: 100px;
-  background-color: #272727;
-  width: 100%;
-  margin-bottom: 0px;
-  left: 0;
-  position: fixed;
-  bottom: 0;
-  z-index: 100;
-}
-.classification_2 {
-  width: 100%;
-  height: 100px;
-}
-.button2_student {
-  background-color: transparent;
-}
-
-.button2 {
-  background-color: transparent;
-  backface-visibility: hidden;
-  border: transparent;
-  float: right;
-}
-.classification_2 {
-  background-color: transparent;
-}
-.button2_childhood {
-  background-color: transparent;
-  border-color: transparent;
-}
-.disc_2 {
-  width: 100%;
-  height: 700px;
-  margin-top: 200px;
-  margin-left: 20px;
-  margin-bottom: 300px;
-}
-
-.content2 {
-  align-content: center;
-  width: 70%;
-  margin-left: 15%;
-  margin-right: 15%;
-}
-.narv2 {
-  float: right;
-}
-.left_bar3 {
-  height: 100%;
-  width: 20%;
-  float: left;
-}
-.right_bar3 {
-  height: 100%;
-  width: 80%;
-  float: right;
-  background-color: transparent;
-}
-.input_bar3_title {
-  background-color: transparent;
-  margin-top: 100px;
-  margin-left: 200px;
-  height: 60px;
-  width: 600px;
-}
-.input_bar3_content {
-  margin-left: 200px;
-  width: 600px;
-  height: 400px;
-}
-
-.form-control3_title {
-  border: solid;
-  border-color: #0fc2ec;
-  background-color: transparent;
-  font-size: 40px;
-  width: 600px;
-}
-.form-control3_name {
-  width: 250px;
-  float: left;
-  height: 60px;
-  background-color: transparent;
-  font-size: 40px;
-  border: solid;
-  border-color: #3fcfaa;
-  margin-left: 200px;
-}
-.form-control3_category {
-  width: 250px;
-  height: 60px;
-  background-color: transparent;
-  font-size: 40px;
-  border: solid;
-  border-color: #3fcfaa;
-  margin-left: 93px;
-}
-.form-control3_2 {
-  background-color: transparent;
-  border: solid;
-  border-color: #fb9c9d;
-  font-size: 40px;
-  width: 600px;
-  height: 350px;
-}
-.button3_start {
-  height: 60px;
-  margin-left: 400px;
-  margin-top: -30px;
-}
-.button3 {
-  background-color: transparent;
-  backface-visibility: hidden;
-  border: transparent;
-}
-.button2_booth {
-  height: 90px;
-  border-color: transparent;
-
-  margin-left: 500px;
-  background-color: transparent;
-}
-.middle_4 {
-  width: 60%;
-  height: 100%;
-}
-.right_bar4 {
-  width: 20%;
-  float: right;
-  background-color: transparent;
-  margin-right: 120px;
-  margin-top: -560px;
-}
-.problem_5 {
-  width: 60%;
-  margin-top: 300px;
-  margin-left: 100px;
-  font-size: 20px;
-}
-.box5_2 {
-  float: right;
-  width: 100px;
-  margin-top: -120px;
-}
-.box5 {
-  width: 100px;
-}
-.button5 {
-  background-color: transparent;
-  backface-visibility: hidden;
-  border: transparent;
-  width: 400px;
-}
-.delete_logo {
-  width: 15%;
-  margin-left: 500px;
-  float: right;
-  height: 100%;
-  background-color: transparent;
-  backface-visibility: hidden;
-  border: transparent;
-  margin-top: -450px;
-}
-.button5_del {
-  background-color: transparent;
-  backface-visibility: hidden;
-  border: transparent;
-  margin-top: -400px;
-}
-.button4 {
-  background-color: transparent;
-  border-color: transparent;
-}
-.content_404 {
-  height: 100%;
-  width: 500px;
-  margin-left: 400px;
-  margin-top: 80px;
-}
-.box404 {
-  width: 400px;
-}
-.delete_logo_404 {
-  margin-top: 100px;
-  width: 100%;
-  margin-left: 750px;
-}
 h1 {
   color: white;
   align-content: center;
+  font-weight: lighter;
+  font-family: "Roboto", sans-serif;
 }
 h2 {
   color: white;
@@ -381,4 +131,24 @@ h2 {
 p {
   color: white;
   font-size: 1.5em;
+}
+figure {
+  width: 20%;
+  height: 20%;
+}
+.c4-izmir {
+  margin: 10px !important;
+}
+.c4-izmir h1 {
+  font-size: 3vh;
+}
+
+@media (max-width: 768px) {
+  figure {
+    width: 40%;
+    height: 40%;
+  }
+  .c4-izmir h1 {
+    font-size: 3vh;
+  }
 }
