--- a/css/about_us.css
+++ b/css/about_us.css
@@ -26,15 +26,14 @@
 .member-content {
   width: 80%;
   margin: 0 auto;
-  font-size: 3vh;
-  font-weight: lighter;
   text-align: left;
-  font-family: "Roboto", sans-serif;
-  line-height: 3.5vh;
+  color: #c5c2c3;
+  font-family: "IBM Plex Mono", monospace;
+  line-height: 1.5em;
 }
 .sound-team,
 .visual-team {
-  color: #c5c2c3;
+  color: white;
   font-size: 25px;
   text-align: center;
   font-weight: bolder;
@@ -124,7 +123,7 @@ h2 {
 }
 p {
   color: white;
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 figure {
   width: 20%;
