--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -81,6 +81,12 @@
 .full-menu.is-active ul li:nth-child(5) {
   transition-delay: 0.4s;
 }
+.full-menu.is-active ul li:nth-child(6) {
+  transition-delay: 0.5s;
+}
+.full-menu.is-active ul li:nth-child(7) {
+  transition-delay: 0.6s;
+}
 
 .burger {
   width: 60px;
