--- a/css/memory_list.css
+++ b/css/memory_list.css
@@ -64,11 +64,11 @@ h1 {
 
 h2 {
   font-size: 2em;
-  margin: 0;
+  margin:0;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 500px;
+  max-width: 600px;
 }
 
 .main {
@@ -355,5 +355,9 @@ h2 {
 
   .fixed-bottom .center {
     width: 95% !important;
+  }
+  .col-9{
+     left: 3vw;
+     top: 2vw;
   }
 }
