--- a/css/style.css
+++ b/css/style.css
@@ -496,7 +496,7 @@ video {
 #skipBtn {
   margin: 20px 0 50px 0;
 }
-/* 
+/*
 #svg-skip {
   display: inline-block;
 } */
@@ -771,7 +771,7 @@ a {
   transform: translateY(-50%);
   width: 320px;
   cursor: pointer;
-  box-shadow: inset 0 0 5px var(--cpurple), inset 0 0 50px var(--cpurple),
+  box-shadow: inset 0 0 1px var(--cpurple), inset 0 0 20px var(--cpurple),
     inset 0 0 10px var(--cpurple), 0 0 10px var(--cpurple),
     0 0 1px var(--cpurple), 0 0 20px var(--cpurple);
   background: transparent;
@@ -858,8 +858,8 @@ a {
 }
 
 #defaultCanvas0 {
-  width: 100% !important;
-  height: 100% !important;
+  width: 120% !important;
+  height: 120% !important;
 }
 
 /**********back-page-button*************/
@@ -914,3 +914,34 @@ a {
     left: 0 !important;
   }
 }
+
+.play{
+  position:absolute;
+  top: 38vw;
+  left: 37vw;
+  width: 6vw;
+
+  border: 0;
+  background: transparent;
+  box-sizing: border-box;
+  width: 100px;
+  height: 74px;
+
+  border-color: transparent transparent transparent red;
+  transition: 100ms all ease;
+  cursor: pointer;
+
+  // play state
+  border-style: solid;
+  border-width: 37px 0 37px 60px;
+
+  &.paused {
+  border-style: double;
+  border-width: 0px 0 0px 60px;
+}
+
+&:hover {
+  border-color: transparent transparent transparent blue;
+}
+}
+/***********save.php-page*******************/
