--- a/css/style.css
+++ b/css/style.css
@@ -597,10 +597,15 @@ video {
 
 /***************************Your Memory*************************/
 .sound-control {
+  width: 36px;
+  height: 36px;
   position: absolute;
-  bottom: 20px;
-  right: 20px;
+  bottom: 0;
+  right: 0;
   cursor: pointer;
+  margin-bottom: 20px;
+  border-radius: 50px;
+  border: solid 2px var(--lgreen);
 }
 
 .record-hint {
@@ -889,8 +894,8 @@ a {
     height: 90% !important;
   }
   .sound-control {
-    right: 5vh;
-    bottom: 1vh;
+    padding: 0 50px 15px 0;
+    transform: scale(0.8);
   }
 
   .record-hint {
@@ -906,6 +911,21 @@ a {
   .data-panel {
     padding: 0 50px;
   }
+
+  .backicon-fixed {
+    transform: scale(0.8);
+  }
+
+  .play {
+    margin-right: 50px;
+    transform: scale(0.8);
+  }
+
+  .sound-control {
+    margin-right: 55px;
+    margin-bottom: 13px;
+    transform: scale(0.8);
+  }
 }
 
 @media (max-width: 576px) {
@@ -915,33 +935,30 @@ a {
   }
 }
 
-.play{
-  position:absolute;
-  top: 38vw;
-  left: 37vw;
-  width: 6vw;
-
-  border: 0;
+.play {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-bottom: 20px;
+  margin-right: -49px;
+  border-radius: 50px;
+  border: solid 2px var(--lgreen);
   background: transparent;
   box-sizing: border-box;
-  width: 100px;
-  height: 74px;
-
-  border-color: transparent transparent transparent red;
+  width: 36px;
+  height: 36px;
   transition: 100ms all ease;
   cursor: pointer;
-
-  // play state
-  border-style: solid;
-  border-width: 37px 0 37px 60px;
-
-  &.paused {
-  border-style: double;
-  border-width: 0px 0 0px 60px;
 }
 
-&:hover {
-  border-color: transparent transparent transparent blue;
+.play.paused {
+  opacity: 0.8;
 }
+
+.backicon-fixed {
+  margin: 20px 20px;
+  position: fixed;
+  top: 0;
+  z-index: 999;
 }
 /***********save.php-page*******************/
