--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,13 @@ body {
   overflow: hidden;
 }
 .index-background {
-  width: 100%;
-  position: absolute;
+  width: 95%;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: -1;
+  padding-bottom:50px;
 }
 
 .index-background img {
@@ -364,6 +365,25 @@ h2 {
   color: white;
   align-content: center;
   font-size: 1.8em;
+}
+
+.hint{
+  position:fixed;
+  bottom:0;
+  left:0;
+  right:0;
+  margin-bottom: 20px;
+  text-align: center;
+  color:var(--lblue);
+  font-family: "Orbitron", sans-serif;
+}
+
+.hint a{
+  text-decoration: none;
+}
+
+.hint span{
+  color:white;
 }
 
 /***************************Menu*************************/
@@ -866,6 +886,10 @@ a {
 @media (max-width: 1200px) {
   #back-page-button {
     transform: scale(0.8, 0.8);
+  }
+  .index-background{
+    width:100%;
+    padding:0 !important;
   }
 }
 
