--- a/css/style.css
+++ b/css/style.css
@@ -553,6 +553,7 @@ video {
   font-size: 1em;
   font-weight: 300;
   opacity: 0.3;
+  text-align: center;
 }
 
 .btn-control:hover {
@@ -570,6 +571,25 @@ video {
   bottom: 50px;
   width: 400px;
   height: 50px;
+}
+
+.btn-right{
+  text-align: right;
+}
+
+.btn-center{
+  text-align: center;
+}
+
+#btn-enter-archive{
+  position: absolute;
+  /* width: 20vw; */
+  border: solid 5px var(--cpurple);
+  height: 40px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin-top: 44vh;
 }
 
 @media (min-aspect-ratio: 16/9) {
@@ -948,6 +968,8 @@ a {
     top: 2vh !important;
     left: 0 !important;
   }
+
+
 }
 
 .sound-control {
@@ -1055,6 +1077,13 @@ a {
     transform: scale(0.8);
   }
 
+  div#skipBtn {
+    border: none;
+    box-shadow: none;
+    text-align: right;
+    font-size:1.2em;
+    margin:0;
+}
   .play {
     transform: scale(0.8);
     margin-right: 50px;
