--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body {
   background-attachment: fixed;
 }
 
-#body-introduction {
+/* #body-introduction {
   background-image: url("../img/bg/bg_line.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -75,7 +75,7 @@ body {
   overflow: hidden;
   width: 100%;
   height: 100%;
-}
+} */
 
 #body-viewmemory {
   background-color: rgb(24, 30, 0);
