--- a/css/about_us.css
+++ b/css/about_us.css
@@ -66,6 +66,11 @@ figure {
   margin: 10px !important;
 }
 
+@media (max-width: 1200px){
+   figure h1 {
+  font-size: 1.1em !important;
+}
+
 @media (max-width: 992px) {
   figure h1 {
     font-size: 1em !important;
